# six_wheel_robot

./: README.md
Arduino/motor_driver/: .motor_driver.ino.swp  motor_driver.ino
ROS/motor_driver/: CMakeLists.txt  package.xml
ROS/motor_driver/scripts/: motor_driver.py
arduino_server/: README.md  app.js  index.html
line_follower/: Makefile  line_detector.cpp  line_detector.h  line_follower.cpp  line_follower.h  main.cpp  parameter.cpp  parameter.h
raspi_control/: CMakeLists.txt
raspi_control/include/: DataMaker.h  Object.h  Parser.h  SioClientWrapper.h  line_detector.h  parameter.h  serial_lib.h
raspi_control/src/: line_detector.cpp  line_follower.cpp  main.cpp  parameter.cpp  serial_lib.cpp  simpletest_raspicam_cv.cpp
serial/: Makefile  serial_test.cpp
